external-access/external-access-grafana/dev/ingressroute-patch-grafana.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  routes:
    - match: Host(`infra.192.168.0.13.xip.io`) && PathPrefix(`/grafana/`)
      kind: Rule
      services:
        - name: prometheus-operator-grafana
          port: 80
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-tls
spec:
  routes:
    - match: Host(`infra.192.168.0.13.xip.io`) && PathPrefix(`/grafana/`)
      kind: Rule
      services:
        - name: prometheus-operator-grafana
          port: 80
      middlewares:
        - name: monitoring-stripprefix
